--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^4.0.14",
+    "react-router-dom": "^7.11.0",
     "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.18",
     "zod": "^4.2.1",
