feat: integrate i18n for internationalization support
- Added i18n initialization in main.tsx for localization.
- Updated WorkflowEditorPage to use translation for document titles.
- Refactored WorkflowsPage to utilize translation for various UI texts and labels.
- Enhanced workflow creation and duplication logic to include execution data.
- Improved local storage workflow management with sorted listing.
- Added hooks alias in tsconfig and vite config for better module resolution.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -48,7 +48,10 @@
       "@types/*": ["src/types/*"],
 
       "@assets": ["src/assets/index.ts"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+
+      "@hooks": ["src/hooks/index.ts"],
+      "@hooks/*": ["src/hooks/*"]
     }
   },
   "include": ["src"]
