--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "elkjs": "^0.11.0",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
+    "react-i18next": "^16.5.1",
     "react-resizable-panels": "^4.0.14",
     "react-router-dom": "^7.11.0",
     "reactflow": "^11.11.4",
