feat(workflows): add Workflow components and hooks - Introduced WorkflowGrid, WorkflowLeftSidebar, WorkflowThumbnail, and related components for better workflow management. - Implemented tabs for Activity, Overview, and Settings with respective functionalities. - Added hooks for managing workflows and searching through them. - Created a centralized index for easier imports of workflow components and hooks. - Defined types for better type safety and clarity in workflow-related data structures.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,6 +29,9 @@
       "@/*": ["src/*"],
       "@app/*": ["src/app/*"],
 
+      "@pages": ["src/pages/index.ts"],
+      "@pages/*": ["src/pages/*"],
+
       "@features": ["src/features/index.ts"],
       "@features/*": ["src/features/*"],
 
